--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -96,9 +96,9 @@
 \maketitle
 
 \begin{abstract}
-\ndg{revise this in light of current framing and emphasis...}
-	What role does context have in the disambiguation between distributive and collective interpretations of plural predications? We focus on the phenomenon of ``stubborn distributivity,'' whereby certain predicates (e.g., \emph{big}, \emph{tall}) are claimed to lack collective interpretations altogether. First, we establish a method for studying plural predication experimentally, and demonstrate that interpretation choice is mediated by three factors: the immediate linguistic context, the local discourse context, and the broader world context. 
-	Then, we formalize the contributions of context within the Bayesian Rational Speech-Acts framework, showing that stubborn distributivity emerges from the reasoning processes of speakers and listeners. 	
+\ndg{revise this in light of current framing and emphasis...} \gcs{better?}
+	This paper investigates the role of context in the disambiguation between distributive and collective interpretations of plural predications.  We focus on the phenomenon of ``stubborn distributivity,'' whereby certain predicates (e.g., \emph{big}, \emph{tall}) are claimed to lack collective interpretations altogether. Over the course of three experiments, we show that stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in most contexts; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
+	We formalize the pragmatics of utterance disambiguation within the Bayesian Rational Speech-Acts framework, showing how stubborn distributivity emerges from properties of context and the reasoning processes of speakers and listeners: speakers prefer more stable, more potentially informative utterances; listeners understand speakers’ preferences and use this understanding as they interpret utterances.	
 	%, using unambiguous paraphrases to isolate interpretations. Then, we apply our paraphrase endorsement method to naturally-occurring examples from corpora, finding that both the narrow linguistic context and the broader discourse context mediate interpretation choices. Next, we employ the paraphrase endorsement method while manipulating properties of the context directly, and find that the probability of an interpretation depends crucially on potential variability in the property being communicated; the more variable a collective property, the less likely a collective interpretation. Stubbornly distributive predicates name collective properties that are relatively unpredictable in and across contexts (e.g., collective size will depend crucially on the way a set of objects is arranged), which leads to more variable interpretations. A more variable interpretation is potentially less informative because it requires more coordination between speakers and listeners. The interpretation is therefore less useful to speakers for communicating about the state of the world, which makes it less likely. These facts support a general model of rational communication under which the resolution of ambiguities is sensitive to the amount of variability in possible interpretations.  We formalize this pragmatic calculus using a Bayesian Rational Speech-Act model of communication.
 \end{abstract}
 
@@ -124,10 +124,10 @@ Particularly puzzling is the distributive vs.~collective ambiguity of plural pre
 \a. \label{boxeseach} The boxes each are heavy. \hfill \textsc{distributive}
 \b. \label{boxestogether}The boxes together are heavy. \hfill \textsc{collective}
 
-When hearing \Last, we may infer that each box on its own counts as heavy, as in \Last[a], or only that their total weight is heavy, as in \Last[b]. Many light boxes may together count as heavy \citep{scha1984}.
+When hearing \Last, we may infer that each box on its own counts as heavy, as in \Last[a], or only that their total weight is heavy, as in \Last[b]. Under a collective interpretation, many light boxes may together count as heavy \citep{scha1984}.
 How is the interpretation determined?
 
-Consider the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates (e.g., \emph{heavy}, \emph{expensive}, \emph{voluminous}) readily admit collective construals, whiles others (e.g., \emph{big}) do not. 
+Consider the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates (e.g., \emph{heavy}, \emph{expensive}, \emph{voluminous}) readily admit collective construals, whiles others (e.g., \emph{big}, \emph{tall}, \emph{round}) do not. 
 %When complaisantly collective gradable predicates like \emph{heavy} (also \emph{expensive}, \emph{voluminous}) are used in plural predications the meaning is ambigious. Under a distributive reading, \ref{boxeseach}, the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \ref{boxestogether}, we ascribe the property to the subject as a whole---in the case of \ref{boxes} commenting on the total weight of the boxes; many light boxes may together count as heavy \citep{scha1984}.
 %The collective interpretation available to \emph{heavy} proves elusive for most other gradable predicates. 
 For instance, a speaker is hard-pressed to use the sentence in \Next to say of the boxes that their total size is large.
@@ -137,7 +137,9 @@ For instance, a speaker is hard-pressed to use the sentence in \Next to say of t
 %\z. \emph{but not}
 \b. The boxes together are big. \hfill \ding{55}\textsc{collective}
 
-Size and shape adjectives (e.g., \emph{tall}, \emph{long}, \emph{round}) resist collective interpretations. \cite{schwarzschild2011} terms them ``stubbornly distributive,'' signaling the lack of collective interpretations. \citet{zhang2013} labels this class of predicates ``delimitable,'' highlighting their usage to describe physical extents. Supporting the robustness of this phenomenon, \cite{syrett2015} finds evidence of stubborn distributivity in children as young as 3 years of age.
+Size and shape adjectives 
+%(e.g., \emph{tall}, \emph{long}, \emph{round}) 
+resist collective interpretations. \cite{schwarzschild2011} terms them ``stubbornly distributive,'' signaling the lack of collective interpretations. \citet{zhang2013} labels this class of predicates ``delimitable,'' highlighting their usage to describe physical extents. Supporting the robustness of this phenomenon, \cite{syrett2015} finds evidence of stubborn distributivity in children as young as 3 years of age.
 
 Collective predication arises when a property is ascribed directly to a plurality, rather than distributed among its members \citep{link1983}. Semanticists treat stubborn distributivity as a lexical distinction: stubbornly distributive predicates behave as such because they cannot contain pluralities in their basic denotations \citep{schwarzschild2011,vazquezrojas2012,zhang2013}.\footnote{In his characterization of stubborn distributivity, Schwarzschild first assumes that gradable adjectives are predicates of events \citep[e.g.,][]{higginbothamschein1989}. Thus, \emph{heavy} predicates over \textsc{heavy} events, \emph{big} over \textsc{big} events, etc. For \citeauthor{schwarzschild2011}, stubbornly distributive predicates are those that require their events to have only single participants. The details are not directly relevant for our purposes; what is relevant is the lexical distinction \citeauthor{schwarzschild2011} and others make between stubbornly distributive and complaisantly collective predicates.}
 This explanation suffers two flaws:
@@ -158,13 +160,13 @@ This account explains the phenomenon of stubborn distributivity as a result of t
 It also predicts that context should matter: in a context where the collective property is more stable, the collective reading should be more felicitous.
 
 For physical properties, the stability of physical arrangements is a key element of context. If arrangements are less likely to change, collective properties become more predictable, and so collective interpretations become more useful and more likely. 
-We test this prediction in Expt.~3, measuring whether the collective \emph{big} and \emph{tall} indeed feel more natural for boxes that are always stacked regularly than for jumbled piles of boxes.
+We test this prediction in Expt.~3, measuring whether collective \emph{big} and \emph{tall} indeed feel more natural for boxes that are always stacked regularly than for jumbled piles of boxes.
 More generally, some types of objects may have more predictable collective properties than others by virtue of how regularly they instantiate in the world.  If we could find objects that instantiate in regular physical arrangements (e.g., shelves or waves) or with no physical arrangement at all (e.g., numbers or ideas), we might expect stubbornly distributive predicates to more readily admit collective interpretations when the nouns that name these objects serve as subject.
 This reasoning leads to the prediction that the nouns which serve as objects in a plural predication should also affect the likelihood of collective interpretation. %\ndg{put an example back here?}
 In Expt.~2, we test whether this holds for a variety of predicates.
 
 %We are arguing for an explanation of plural predication in which ambiguity is resolved by pragmatic reasoning: the usefulness of each reading is determined partly by its contextual predictability, and readings which would be more useful on these grounds are preferred. 
-Beyond contextual predictability of collective properties, the pragmatic view of plural predication entails that other standard pragmatic pressures should come to bear in the reasoning processes of speakers and listeners, affecting the felicity and thereby likelihood of the collective (and distributive) interpretation.
+Beyond contextual predictability of collective properties, the pragmatic view of plural predication entails that other standard pragmatic pressures should come to bear on the reasoning processes of speakers and listeners, affecting the felicity and thereby likelihood of the collective (and distributive) interpretation.
 To whit, changing the speaker's epistemic state ought to influence the resulting disambiguation between distributive and collective interpretations. 
 If a speaker lacks evidence that would verify a specific interpretation, and if a listener knows this about the speaker, then that unsupported interpretation should be particularly improbable. This intuition derives straightforwardly from the Maxim of Quality from \cite{grice1975}: ``Do not say that for which you lack adequate evidence.'' 
 We test this prediction first in Expt.~1 and then with a more sensitive measure in Expt.~3.
@@ -563,16 +565,16 @@ Narrowing our focus to the predicates \emph{big}, \emph{heavy}, and \emph{tall} 
 
 By comparing specific subject nouns within predicates, we begin to find evidence for the context-dependent nature of these predications. With \emph{big}, four out of the five subject nouns strongly resisted collective interpretations. However, with \emph{waves}, participants much more readily endorsed collective paraphrases. As was the case with \emph{small numbers} in Expt.~2a. Several interpretations of this finding are possible; one is that limiting the noise of a collective interpretation---by reducing the variability in the physical instantiation of the subject---increases the rates of that interpretation. We follow up on this hypothesis with a direct manipulation of predictability in Expt.~3.
 
-<<<<<<< Updated upstream
-Finally, with \emph{heavy}, we found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a distributive interpretation. Lids and bags are probably picked up together, certainly more so than trees, and yet more so than loads or men. 
+%<<<<<<< Updated upstream
+Finally, with \emph{heavy}, we found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a distributive interpretation. Lids and bags are probably picked up together, certainly more so than loads or men. 
 If speakers experience only the collective weight of a plurality, not the individual weights of the members, they lack knowledge which would license the distributive meaning. 
 If listeners are aware of this, then the alternative, collective reading becomes more likely for collections (such as lids) that are likely to be lifted together.
 %Without experiencing the collective weight of a plurality (e.g., of many loads), speakers lack knowledge about whether or not a collective interpretation would be true (e.g., what the total weight of the loads was); without this knowledge, the interpretation becomes less likely, and as a result its alternative, the distributive interpretation, becomes more likely. 
 As with contextual predictability, we follow up on this result with a direct manipulation of speaker access to knowledge in Expt.~3.
-=======
-Finally, with \emph{heavy}, we found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a collective interpretation. Lids and bags are probably picked up together, certainly more so than trees, and yet more so than loads or men. Without experiencing the collective weight of a plurality (e.g., of many loads), speakers lack knowledge about whether or not a collective interpretation would be true (e.g., what the total weight of the loads was); without this knowledge, the interpretation becomes less likely, and as a result its alternative, the distributive interpretation, becomes more likely. As with contextual predictability, we follow up on this result with a direct manipulation of speaker access to knowledge in Expt.~3.
-% NOTE TO SELVES: follow up on this result with two experiments, one extimating object size and another estimating collectivity; then, check the correlation between the two measures
->>>>>>> Stashed changes
+%=======
+%Finally, with \emph{heavy}, we found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a collective interpretation. Lids and bags are probably picked up together, certainly more so than trees, and yet more so than loads or men. Without experiencing the collective weight of a plurality (e.g., of many loads), speakers lack knowledge about whether or not a collective interpretation would be true (e.g., what the total weight of the loads was); without this knowledge, the interpretation becomes less likely, and as a result its alternative, the distributive interpretation, becomes more likely. As with contextual predictability, we follow up on this result with a direct manipulation of speaker access to knowledge in Expt.~3.
+%% NOTE TO SELVES: follow up on this result with two experiments, one extimating object size and another estimating collectivity; then, check the correlation between the two measures
+%>>>>>>> Stashed changes
 
 
 \section{Experiment 3: Manipulating context}
@@ -749,7 +751,7 @@ The literal listener $L_{0}$ has prior uncertainty about the context, $P(c)$, an
 $$P_{L_{0}}(s|u,v,\theta_d,\theta_c) \propto \sem{u}^{v,c,\theta_d,\theta_c}(s) \cdot P(c) \cdot P(s)$$
 The distribution on collective-context, $P(c)$, will determine how predictable the collective property is compared to the distributive: higher entropy $P(c)$ will correspond to noisier collective interpretations.
 The other interpretation variables ($v$, $\theta_d$, $\theta_c$) are lifted, so that they will be actively reasoned about by the pragmatic listener. Put simply, the pragmatic listener resolves the interpretation of an ambiguous utterance and fixes the appropriate thresholds for vague gradable predicates.
-\ndg{should we say a word about why we choose to lift some but not all of the variables? what happens if we lift $c$???}
+\ndg{should we say a word about why we choose to lift some but not all of the variables? what happens if we lift $c$???} \gcs{I wonder if it's worth getting into this here..}
 %We could have the literal listener reason also about the utterance interpretation, $v$, but we choose instead to \emph{lift} it, so that pragmatic forces will affect it. 
 
 The speaker, $S_{1}$, chooses an utterance \emph{u} that would most effectively communicate some state \emph{s} to a literal listener \emph{L}$_{0}$.  In other words, the speaker's utility function $U_{S_{1}}$ minimizes the effort \emph{L}$_{0}$ would need to arrive at \emph{s} from \emph{u} (i.e., increasing utterance informativity by decreasing surprisal), all while being efficient at communicating (i.e., minimizing utterance cost, $C(u)$):
@@ -965,7 +967,7 @@ With \emph{heavy}-specific values for $P(c)$ ($\sigma=0.7$; all other parameters
 	\centering
 	\includegraphics[width=\linewidth]{plots/model_all_new.eps}
 	\vspace{-20pt}
-	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations. For \emph{heavy}, the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``sum''). For \emph{big} and \emph{tall}, variability of context (i.e., ``random'' vs.~``regular'') is modeled by collective interpretation noise $P(c)$.} \label{fit-model}
+	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations (cf.~Fig.~\ref{resultsexpt2}). For \emph{heavy}, the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``sum''). For \emph{big} and \emph{tall}, variability of context (i.e., ``random'' vs.~``regular'') is modeled by amount of collective interpretation noise $P(c)$.} \label{fit-model}
 \end{figure}
 
 To qualitatively evaluate the role of contextual predictability for \emph{big} and \emph{tall}, we again have the model predict collective endorsement, this time collapsing over the scenario manipulation. As with \emph{heavy}, we fit predicate-specific values for $P(c)$; to model the effect of our contextual manipulation, we increased contextual noise in random contexts (\emph{big}/\emph{tall} \texttt{random}: $\sigma=3$; \emph{big} \texttt{regular}: $\sigma=1$; \emph{tall} \texttt{regular}: $\sigma=0.1$).  We also increased the cost of the unambiguous utterances to $3$ (cf.~the cost of $2$ for the results reported above). With no other changes to model parameters, we generate the predictions plotted in Fig.~\ref{fit-model}; once again, the fit is near perfect.
@@ -981,7 +983,7 @@ To qualitatively evaluate the role of contextual predictability for \emph{big} a
 
 In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise yields near exact quantitative predictions of the observed human behavior. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. %Collective interpretations become more likely as the properties they name become more predictable in context.
 
-\ndg{some caveat about what the model is doing (formalizing the pragmatic theory, accommodating the data) and not doing (predicting the quantitative details of the data).}
+\ndg{some caveat about what the model is doing (formalizing the pragmatic theory, accommodating the data) and not doing (predicting the quantitative details of the data).} \gcs{I'm not sure I understand what you want here. We should talk about this.}
 
 \section{General discussion}
 
@@ -992,15 +994,15 @@ On this pragmatic account, stubborn distributivity does not form a distinct cate
 
 %\ndg{i'd prefer to have the info in the net three paragraphs organized by effect, rather than expt: status of classes according to stubbornness, effect of predictability, effect of speaker knowledge.}
 
-We found evidence for this pragmatic explanation over the course of three experiments. Perhaps most problematic for a categorial account of stubborn distributivity were the results of Expt.~2, where we showed that predicates do not form neat groupings according to whether they are stubbornly distributive; stubbornness indeed is gradient. It further depends on many aspects of the context of predication. Here we focused on two such aspects: the contextual predictability of collective properties and speakers' access to knowledge.
+We found evidence for this pragmatic explanation over the course of three experiments. Perhaps most problematic for a categorical account of stubborn distributivity were the results of Expt.~2, where we showed that predicates do not form neat groupings according to whether they are stubbornly distributive; stubbornness indeed is gradient. It further depends on many aspects of the context of predication. Here we focused on two such aspects: the contextual predictability of collective properties and speakers' access to knowledge.
 
 After manipulating the regularity of the predication context directly in Expt.~3, we found that more regular contexts yielded greater rates of collective paraphrase endorsement. We thus confirmed our hypothesis: increasing contextual predictability of collective properties---by increasing the regularity of the contexts themselves---increases rates of collective interpretations. In other words, rates of collective interpretation were shown to be malleable, in this case influenced by the predictability of the property named in the specific context of predication. 
 %First, in Expt.~1, we verified the phenomenon of stubborn distributivity, demonstrating that \emph{big} resists collective interpretations while \emph{heavy} admits them. The results of Expt.~1 also begin to demonstrate the role of 
 
-We similarly confirmed our hypothesis regarding speaker knowledge: in Expts.~1 and 3, we manipulated the discourse context in such a way as to plausibly limit the speaker's access to knowledge of individual properties. We found that when speakers plausibly lacked epistemic support for a distributive interpretation, collective interpretations became more likely; speakers are less likely to intend an interpretation for which they lack epistemic support.
+We similarly confirmed our hypothesis regarding speaker knowledge: in Expts.~1 and 3, we manipulated the discourse context in such a way as to plausibly limit the speaker's access to knowledge of individual properties. We found that when speakers lacked epistemic support for a distributive interpretation, collective interpretations became more likely; speakers are less likely to intend an interpretation for which they lack epistemic support.
 
 %While this reasoning is enough to motivate our experiments, some confusion could remain about the exact nature and role of factors such as predictability. 
-In section \ref{model} we formalized our hypotheses with a computational model of pragmatic dissambiguation that gives a precise role for contextual noise and speaker knowledge. This pragmatic model indeed predicts that the acceptability of collective readings should depend on predictability and speaker knowledge. Formalizing the pragmatic approach is an important step in validating it as a coherent theory of plural predication and  stubborn distributivity.
+In section \ref{model}, we formalized our hypotheses with a computational model of pragmatic dissambiguation that gives a precise role for contextual noise and speaker knowledge. This pragmatic model indeed predicts that the acceptability of collective readings should depend on predictability and speaker knowledge. Formalizing the pragmatic approach is an important step in validating it as a coherent theory of plural predication and  stubborn distributivity.
 
 %In what follows, we discuss in more detail the consequences of these findings for the theories they inform.
 
@@ -1037,7 +1039,7 @@ To understand this mechanism, namely how contextual predictability affects the c
 
 Our explanation for stubborn distributivity relies on a sophisticated process of recursive reasoning involving listeners and speakers. 
 %Speakers choose utterances to efficiently and accurately resolve some question under discussion, reasoning about how a naive listener would interpret their utterance and weighing its relative cost. Listeners know this, and interpret the utterance they receive with this intuitive theory of speakers in mind. That is, listeners reason about speakers reasoning about listeners. 
-Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs \ndg{cite something}), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model to derive that makes quantitative predictions. 
+Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs \ndg{cite something}), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model that makes quantitative predictions. 
 %Our modeling approach has allowed for the specification and testing of hypotheses situated at the interface between semantics and pragmatics: how utterance semantics interacts with properties of context---both linguistic and more broadly construed---to resolve the intended interpretation of potentially ambiguous utterances. 
 By considering utterance semantics within an articulated model of pragmatics, what began as a description of the phenomenon---certain predicates resist collective interpretations---now has an explanation: speakers avoid interpretations that are unlikely to correctly resolve the question under discussion (e.g., collective interpretations of stubbornly distributive predicates), and listeners know this about speakers, so they avoid inferring interpretations that speakers avoid using.
 
