--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-10-09 09:28:01 -0700 
+%% Created for Greg Scontras at 2015-10-13 10:44:35 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -13,9 +13,9 @@
 	Author = {Noah D. Goodman and Daniel Lassiter},
 	Booktitle = {The Handbook of Contemporary Semantics, 2nd Edition},
 	Date-Added = {2015-10-09 16:27:59 +0000},
-	Date-Modified = {2015-10-09 16:27:59 +0000},
+	Date-Modified = {2015-10-13 17:44:35 +0000},
 	Editor = {Shalom Lappin and Chris Fox},
-	Publisher = {Wiley=Blackwell},
+	Publisher = {Wiley-Blackwell},
 	Title = {Probabilistic Semantics and Pragmatics: Uncertainty in Language and Thought},
 	Year = {2015}}
 
